--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
 
 .page {
   overflow: hidden;
-  padding-top: 86px;
+  padding-top: 0;
   padding-bottom: 72px;
 }
 
@@ -125,7 +125,7 @@ a {
 }
 
 .hero {
-  padding: 80px 0 60px;
+  padding: calc(80px + 86px) 0 60px;
   background: var(--primary);
   color: var(--bg);
 }
